--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -20,7 +20,7 @@
             <RowConstraints minHeight="20.0" prefHeight="60.0" vgrow="NEVER" />
         </rowConstraints>
         <FlowPane id="playback_box" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" styleClass="flow_pane" GridPane.columnIndex="1" GridPane.rowIndex="2">
-          <Button fx:id="velocity_btn" mnemonicParsing="false" text="Mute" wrapText="true" onAction="#toggleVelocity">
+          <Button fx:id="mute_btn" mnemonicParsing="false" text="Mute" wrapText="true" onAction="#toggleMute">
               <cursor>
                   <Cursor fx:constant="HAND" />
               </cursor>
@@ -28,7 +28,7 @@
                <Insets left="10.0" right="10.0" />
             </FlowPane.margin>
           </Button>
-          <Button fx:id="play_btn" mnemonicParsing="false" onAction="#togglePlayPause" text="Play" wrapText="true">
+          <Button fx:id="play_btn" mnemonicParsing="false" onAction="#togglePlayPause" text="Pause" wrapText="true">
               <cursor>
                   <Cursor fx:constant="HAND" />
               </cursor>
