--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.*?>
 
 <StackPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="340.0" minWidth="600.0" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.dhbw.ui.VideoScene">
-    <ImageView fx:id="currentFrame" fitHeight="450.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER"/>
+    <ImageView fx:id="currentFrame" fitHeight="450.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER" />
     <GridPane fx:id="menu_pane" stylesheets="@VideoScene.css">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="220.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
@@ -19,8 +19,8 @@
             <RowConstraints minHeight="40.0" prefHeight="120.0" vgrow="ALWAYS" />
             <RowConstraints minHeight="20.0" prefHeight="60.0" vgrow="NEVER" />
         </rowConstraints>
-        <FlowPane id="playback_box" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" styleClass="flow_pane" GridPane.columnIndex="1" GridPane.rowIndex="2">
-          <Button fx:id="mute_btn" mnemonicParsing="false" text="Mute" wrapText="true" onAction="#toggleMute">
+        <FlowPane id="playback_box" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="287.0" styleClass="flow_pane" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+          <Button fx:id="mute_btn" mnemonicParsing="false" onAction="#toggleMute" prefWidth="70" text="Mute">
               <cursor>
                   <Cursor fx:constant="HAND" />
               </cursor>
@@ -28,7 +28,7 @@
                <Insets left="10.0" right="10.0" />
             </FlowPane.margin>
           </Button>
-          <Button fx:id="play_btn" mnemonicParsing="false" onAction="#togglePlayPause" text="Pause" wrapText="true">
+          <Button fx:id="play_btn" mnemonicParsing="false" onAction="#togglePlayPause" prefWidth="70.0" text="Pause">
               <cursor>
                   <Cursor fx:constant="HAND" />
               </cursor>
@@ -36,7 +36,7 @@
                <Insets left="10.0" right="10.0" />
             </FlowPane.margin>
           </Button>
-          <Button fx:id="metronome_btn" mnemonicParsing="false" text="Click on" wrapText="true" onAction="#toggleMetronome">
+          <Button fx:id="metronome_btn" mnemonicParsing="false" onAction="#toggleMetronome" prefWidth="70.0" text="Click on">
               <cursor>
                   <Cursor fx:constant="HAND" />
               </cursor>
