--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -6,49 +6,51 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="340.0" minWidth="600.0" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.dhbw.ui.VideoScene">
-    <ImageView fx:id="currentFrame" fitHeight="450.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER" />
-    <AnchorPane fx:id="fieldPane" StackPane.alignment="CENTER"/>
-    <AnchorPane fx:id="shapePane" StackPane.alignment="CENTER"/>
-    <GridPane fx:id="menu_pane" stylesheets="@VideoScene.css">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="220.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="20.0" prefHeight="60.0" vgrow="NEVER" />
-            <RowConstraints minHeight="40.0" prefHeight="120.0" vgrow="ALWAYS" />
-            <RowConstraints minHeight="20.0" prefHeight="60.0" vgrow="NEVER" />
-        </rowConstraints>
-        <FlowPane id="playback_box" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="287.0" styleClass="flow_pane" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-          <Button fx:id="mute_btn" mnemonicParsing="false" onAction="#toggleMute" prefWidth="70" text="Mute">
-              <cursor>
-                  <Cursor fx:constant="HAND" />
-              </cursor>
-            <FlowPane.margin>
-               <Insets left="10.0" right="10.0" />
-            </FlowPane.margin>
-          </Button>
-          <Button fx:id="play_btn" mnemonicParsing="false" onAction="#togglePlayPause" prefWidth="70.0" text="Pause">
-              <cursor>
-                  <Cursor fx:constant="HAND" />
-              </cursor>
-            <FlowPane.margin>
-               <Insets left="10.0" right="10.0" />
-            </FlowPane.margin>
-          </Button>
-          <Button fx:id="metronome_btn" mnemonicParsing="false" onAction="#toggleMetronome" prefWidth="70.0" text="Click on">
-              <cursor>
-                  <Cursor fx:constant="HAND" />
-              </cursor>
-            <FlowPane.margin>
-               <Insets left="10.0" right="10.0" />
-            </FlowPane.margin>
-          </Button>
-          <GridPane.margin>
-              <Insets bottom="20.0" />
-          </GridPane.margin>
-        </FlowPane>
-    </GridPane>
-</StackPane>
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="340.0" minWidth="600.0" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.dhbw.ui.VideoScene">
+    <StackPane fx:id="stack" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+        <ImageView fx:id="currentFrame" fitHeight="450.0" fitWidth="800.0" preserveRatio="true" StackPane.alignment="CENTER" />
+        <AnchorPane fx:id="fieldPane" StackPane.alignment="CENTER" AnchorPane.bottomAnchor="0" AnchorPane.topAnchor="0" />
+        <AnchorPane fx:id="shapePane" StackPane.alignment="CENTER" AnchorPane.bottomAnchor="0" AnchorPane.topAnchor="0" />
+        <GridPane fx:id="menu_pane" stylesheets="@VideoScene.css">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="220.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="20.0" prefHeight="60.0" vgrow="NEVER" />
+                <RowConstraints minHeight="40.0" prefHeight="120.0" vgrow="ALWAYS" />
+                <RowConstraints minHeight="20.0" prefHeight="60.0" vgrow="NEVER" />
+            </rowConstraints>
+            <FlowPane id="playback_box" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="287.0" styleClass="flow_pane" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                <Button fx:id="mute_btn" mnemonicParsing="false" onAction="#toggleMute" prefWidth="70" text="Mute">
+                    <cursor>
+                        <Cursor fx:constant="HAND" />
+                    </cursor>
+                    <FlowPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                    </FlowPane.margin>
+                </Button>
+                <Button fx:id="play_btn" mnemonicParsing="false" onAction="#togglePlayPause" prefWidth="70.0" text="Pause">
+                    <cursor>
+                        <Cursor fx:constant="HAND" />
+                    </cursor>
+                    <FlowPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                    </FlowPane.margin>
+                </Button>
+                <Button fx:id="metronome_btn" mnemonicParsing="false" onAction="#toggleMetronome" prefWidth="70.0" text="Click on">
+                    <cursor>
+                        <Cursor fx:constant="HAND" />
+                    </cursor>
+                    <FlowPane.margin>
+                        <Insets left="10.0" right="10.0" />
+                    </FlowPane.margin>
+                </Button>
+                <GridPane.margin>
+                    <Insets bottom="20.0" />
+                </GridPane.margin>
+            </FlowPane>
+        </GridPane>
+    </StackPane>
+</AnchorPane>
