--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
@@ -22,31 +21,34 @@
                 <RowConstraints minHeight="40.0" prefHeight="120.0" vgrow="ALWAYS" />
                 <RowConstraints minHeight="20.0" prefHeight="60.0" vgrow="NEVER" />
             </rowConstraints>
-            <FlowPane id="playback_box" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="287.0" styleClass="flow_pane" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-                <Button fx:id="mute_btn" mnemonicParsing="false" onAction="#toggleMute" prefWidth="70" text="Mute">
+            <FlowPane id="playback_box" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="200.0" styleClass="flow_pane" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                <ImageView fx:id="mute_btn" onMouseClicked="#toggleMute" fitHeight="30" preserveRatio="true">
+                    <Image url="icons/volume_max_blue.png" backgroundLoading="true"/>
                     <cursor>
-                        <Cursor fx:constant="HAND" />
+                        <Cursor fx:constant="HAND"/>
                     </cursor>
                     <FlowPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets left="20.0" right="20.0" />
                     </FlowPane.margin>
-                </Button>
-                <Button fx:id="play_btn" mnemonicParsing="false" onAction="#togglePlayPause" prefWidth="70.0" text="Pause">
+                </ImageView>
+                <ImageView fx:id="play_btn" onMouseClicked="#togglePlayPause" fitHeight="30" preserveRatio="true">
+                    <Image url="icons/stop_blue.png" backgroundLoading="true"/>
                     <cursor>
-                        <Cursor fx:constant="HAND" />
+                        <Cursor fx:constant="HAND"/>
                     </cursor>
                     <FlowPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets left="20.0" right="20.0" />
                     </FlowPane.margin>
-                </Button>
-                <Button fx:id="metronome_btn" mnemonicParsing="false" onAction="#toggleMetronome" prefWidth="70.0" text="Click on">
+                </ImageView>
+                <ImageView fx:id="metronome_btn" onMouseClicked="#toggleMetronome" fitHeight="30" preserveRatio="true">
+                    <Image url="icons/metronome_off_blue.png" backgroundLoading="true"/>
                     <cursor>
-                        <Cursor fx:constant="HAND" />
+                        <Cursor fx:constant="HAND"/>
                     </cursor>
                     <FlowPane.margin>
-                        <Insets left="10.0" right="10.0" />
+                        <Insets left="20.0" right="20.0" />
                     </FlowPane.margin>
-                </Button>
+                </ImageView>
                 <GridPane.margin>
                     <Insets bottom="20.0" />
                 </GridPane.margin>
