--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ChoiceBox?>
 <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="340.0" minWidth="600.0" prefHeight="450.0"
             prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.dhbw.ui.VideoScene"
 >
@@ -57,13 +59,13 @@
             </FlowPane>
             <FlowPane fx:id="settings_tab" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0"
                       prefWidth="40.0" styleClass="flow_pane" GridPane.columnIndex="2" GridPane.halignment="RIGHT"
-                      GridPane.rowIndex="0" GridPane.valignment="CENTER"
+                      GridPane.rowIndex="0" GridPane.valignment="CENTER" onMouseClicked="#toggleSettingsPane"
             >
-                <ImageView fx:id="settings_btn" fitHeight="30" onMouseClicked="#toggleSettingsPane" preserveRatio="true">
+                <cursor>
+                    <Cursor fx:constant="HAND" />
+                </cursor>
+                <ImageView fx:id="settings_btn" fitHeight="30" preserveRatio="true">
                     <Image url="icons/settings_blue.png" backgroundLoading="true"/>
-                    <cursor>
-                        <Cursor fx:constant="HAND" />
-                    </cursor>
                     <FlowPane.margin>
                         <Insets left="20.0" right="20.0" />
                     </FlowPane.margin>
