chore: merge main into time-signature

--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -162,6 +162,12 @@
                         </cursor>
                     </Slider>
                 </HBox>
+                <Label styleClass="setting_label" text="Time signature:"/>
+                <HBox>
+                    <TextField fx:id="time_field_enumerator" styleClass="textfield" prefWidth="50" />
+                    <Label styleClass="setting_label" text=" / "/>
+                    <TextField fx:id="time_field_denominator" styleClass="textfield" prefWidth="50" />
+                </HBox>
             </FlowPane>
 
         </GridPane>
