--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -84,7 +84,11 @@
                 <Label styleClass="setting_label" text="Video Input Device:" />
                 <HBox>
                     <ChoiceBox fx:id="camera_choicebox" styleClass="choice-box" prefWidth="50.0" onAction="#sendCameraSetting" value="0"/>
-                    <Button styleClass="button" onAction="#stopVideoProcessing" text="Scan for cameras"/>
+                    <Button styleClass="button" onAction="#stopVideoProcessing" text="Scan for cameras">
+                        <cursor>
+                            <Cursor fx:constant="HAND" />
+                        </cursor>
+                    </Button>
                 </HBox>
             </FlowPane>
 
