--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -27,15 +27,17 @@
                 <RowConstraints minHeight="20.0" prefHeight="60.0" vgrow="NEVER" />
             </rowConstraints>
             <FlowPane id="playback_box" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0" prefWidth="200.0" styleClass="flow_pane" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
-                <ImageView fx:id="mute_btn" onMouseClicked="#toggleMute" fitHeight="30" preserveRatio="true">
-                    <Image url="icons/volume_high_blue.png" backgroundLoading="true"/>
+                <VBox onMouseClicked="#toggleMute">
                     <cursor>
                         <Cursor fx:constant="HAND"/>
                     </cursor>
-                    <FlowPane.margin>
-                        <Insets left="20.0" right="20.0" />
-                    </FlowPane.margin>
-                </ImageView>
+                    <ImageView fx:id="mute_btn" fitHeight="30" preserveRatio="true">
+                        <Image url="icons/volume_high_blue.png" backgroundLoading="true"/>
+                        <FlowPane.margin>
+                            <Insets left="20.0" right="20.0" />
+                        </FlowPane.margin>
+                    </ImageView>
+                </VBox>
                 <ImageView fx:id="play_btn" onMouseClicked="#togglePlayPause" fitHeight="30" preserveRatio="true">
                     <Image url="icons/stop_blue.png" backgroundLoading="true"/>
                     <cursor>
