feat(ui): enable custom setting of camera input (#17)
* feat(ui): enable custom setting of camera input

* fix(ui): more robust cam changing

- scanning for cameras is only done after
confirmation that processing is stopped
- clearing fieldPane after changing camera (doesnt always work)

* fix(ui): make sendTempoSettings available to FXML

- fix previous crash by adding FXML annotation that was lost in merge

* fix(ui): handle nulls etc in camera scanning

* fix(ui): close #20

* fix(ui): address comments by @Rex2002

- simplify main loop

--- a/src/main/resources/VideoScene.css
+++ b/src/main/resources/VideoScene.css
@@ -58,8 +58,16 @@
 .choice-box {
     -fx-background-radius: 20;
     -fx-border-radius: 20;
-    -fx-background-color: white;
-    margin: 10;
+    -fx-background-color: rgb(247, 248, 250);
+    margin: 20;
+}
+
+.button {
+    -fx-background-radius: 20;
+    -fx-border-radius: 20;
+    -fx-background-color: rgb(110, 160, 191);
+    -fx-text-fill: rgb(247, 248, 250);
+    margin: 20;
 }
 
 .textfield {
