feat: enable custom time signatures
- bug: positionMarker only updates every second beat, but I don't see why
- time denominator currently has no effect. it's probably only important for setting the tempo as we only care about beatsPerBar everywhere else
- detection resolution is equal to beatsPerBar which doesn't always make sense (eg 3/4 should still detect eighths). will have to think of some logic for that

--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -164,9 +164,14 @@
                 </HBox>
                 <Label styleClass="setting_label" text="Time signature:"/>
                 <HBox>
-                    <TextField fx:id="time_field_enumerator" styleClass="textfield" prefWidth="50" />
+                    <TextField fx:id="time_field_enumerator" styleClass="textfield" onAction="#sendTimeSignatureSetting"/>
                     <Label styleClass="setting_label" text=" / "/>
-                    <TextField fx:id="time_field_denominator" styleClass="textfield" prefWidth="50" />
+                    <TextField fx:id="time_field_denominator" styleClass="textfield" onAction="#sendTimeSignatureSetting"/>
+                    <Button styleClass="button" onAction="#sendTimeSignatureSetting" text="Apply">
+                        <cursor>
+                            <Cursor fx:constant="HAND" />
+                        </cursor>
+                    </Button>
                 </HBox>
             </FlowPane>
 
