--- a/src/main/resources/VideoScene.fxml
+++ b/src/main/resources/VideoScene.fxml
@@ -90,7 +90,7 @@
                 </ChoiceBox>
                 <Label styleClass="setting_label" text="Video Input Device:" />
                 <HBox>
-                    <ChoiceBox fx:id="camera_choicebox" styleClass="choice-box" prefWidth="50.0" onMouseClicked="#sendCameraSetting" value="0">
+                    <ChoiceBox fx:id="camera_choicebox" styleClass="choice-box" prefWidth="50.0" onMouseClicked="#sendCameraSetting">
                         <cursor>
                             <Cursor fx:constant="HAND" />
                         </cursor>
@@ -107,6 +107,8 @@
                         <Cursor fx:constant="HAND" />
                     </cursor>
                 </Button>
+                <Label styleClass="setting_label" text="Instrument" />
+                <ChoiceBox fx:id="inst_choicebox" styleClass="choice-box" prefWidth="100.0" onAction="#sendInstSetting" value="Drums"/>
             </FlowPane>
 
             <FlowPane fx:id="music_tab" alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="40.0"
